pHash/src/videoinfo.h

typedef struct callback_parms
{
  //Video info
  VIDEOINFO *vfinfo;

  //Scaling context
  SwsContext *sws_cxt;

  //Original frame
  AVFrame *original;

  //Frame for conversion
  AVFrame *converted;

  //User data
  void *user_data;

} CALLBACK_PARMS;
typedef void (frame_callback)(CALLBACK_PARMS *);
typedef struct T_doubleArray {
    double *array;
    int used, size;
} doubleArray;
typedef struct T_ulong64Array {
    ulong64 *array;
    int used, size;
} ulong64Array;
typedef struct hashdata
{
  //Framelist for storing the keyframes
  //CImgList<uint8_t> *framelist;

  //Array for storing the presentation timestamps
  doubleArray pts;

  //Ulong array for storing the hashes
  ulong64Array hashes;

  //Keyframe count
  int keyframes;

  //DCT matrix and transpose
  //CImg<float> *C;

} HASHDATA;
HASHDATA *ph_max_videohash(char *filename);