pHash/src/pHash.h

typedef unsigned _uint64 ulong64;
typedef unsigned long long ulong64;
/* structure for a single hash */
typedef struct ph_datapoint {
    char *id;
    void *hash;
    float *path;
    uint32_t hash_length;
    uint8_t hash_type;
}DP;
/*! /brief compute dct robust image hash
 *  /param file string variable for name of file
 *  /param hash of type ulong64 (must be 64-bit variable)
 *  /return int value - -1 for failure, 1 for success
 */
int ph_dct_imagehash(const char* file,ulong64 &hash);
DP** ph_dct_image_hashes(char *files[], int count, int threads = 0);
//static CImgList<uint8_t>* ph_getKeyFramesFromVideo(const char *filename);

ulong64* ph_dct_videohash(const char *filename, int &Length);
DP** ph_dct_video_hashes(char *files[], int count, int threads = 0);
int ph_hamming_distance(const ulong64 hash1,const ulong64 hash2);